--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vinayak Bansal - Hacker's Den | Developer Portfolio</title>
+    <title>Vinayak Bansal</title>
     <meta name="description" content="Vinayak Bansal's cyberpunk developer portfolio - Automation Tester, iOS Developer, Ethical Hacker. Enter the digital vault." />
     <meta property="og:title" content="Vinayak Bansal - Hacker's Den" />
     <meta property="og:description" content="Immersive developer portfolio with terminal interface and hacker aesthetics" />
